themes/typing/source/css/typing.css
/* ... */
.dark .archive-container .article-nav a,
.dark .archive-container .page-nav a,
.dark .article .article-nav a,
.dark .article .page-nav a,
.dark .category-container .article-nav a,
.dark .category-container .page-nav a,
.dark .tag-container .article-nav a,
.dark .tag-container .page-nav a {
  color: #bbb;
}

.dark .archive-container .article-nav a:hover,
.dark .archive-container .page-nav a:hover,
.dark .article .article-nav a:hover,
.dark .article .page-nav a:hover,
.dark .category-container .article-nav a:hover,
.dark .category-container .page-nav a:hover,
.dark .tag-container .article-nav a:hover,
.dark .tag-container .page-nav a:hover {
  color: #fff;
}

.dark .archive-container .article-entry blockquote footer strong,
.dark .archive-container .article-meta a,
.dark .article .article-entry blockquote footer strong,
.dark .article .article-meta a,
.dark .category-container .article-entry blockquote footer strong,
.dark .category-container .article-meta a,
.dark .tag-container .article-entry blockquote footer strong,
.dark .tag-container .article-meta a {
  color: #bbb;
}

.dark blockquote {
  color: #aaa;
}

.dark b,
.dark h1,
.dark h2,
.dark h3,
.dark h4,
.dark h5,
.dark h6,
.dark strong {
  color: #ddd;
}

.dark .typo em,
.dark .typo-em,
.dark caption,
.dark legend {
  color: #bbb;
}

.dark .typo table caption,
.dark .typo table td,
.dark .typo-table td {
  border: 1px solid #ddd;
  color: #aaa;
}

.dark .article-entry .highlight,
.dark .article-entry pre {
  color: #d8d8d8;
  background-color: #333;
}

.dark .article-entry .highlight table caption,
.dark .article-entry .highlight table td,
.dark .article-entry .highlight td {
  border: 0;
}

.dark .article-entry .highlight .line.marked {
  background: #444;
}

.article-entry .highlight,
.article-entry pre {
  padding: 1em;
  background: #f3f5f6;
  color: #4d4d4c;
  font-size: 0.9em;
  overflow: auto;
  line-height: 1.8;
}

.article-entry .highlight .gutter pre {
  color: #aeb4b9;
  font-size: 0.9em;
}

.article-entry figure.highlight {
  margin: 0;
}

.article-entry pre code {
  background: 0 0;
  text-shadow: none;
  padding: 0;
}

.article-entry .highlight pre {
  border: 0;
  margin: 0;
  padding: 0;
}

.article-entry .highlight table {
  margin: 0;
  width: 100%;
}

.article-entry .highlight td {
  border: 0;
  padding: 0;
}

.article-entry .highlight figcaption {
  color: #8e908c;
}

.article-entry .highlight figcaption a {
  float: right;
}

.article-entry .highlight .line {
  height: 25px;
}

.article-entry .highlight .line.marked {
  background: #e6e6e6;
}

pre .comment,
pre .title {
  color: #8e908c;
}

pre .attribute,
pre .css .class,
pre .css .id,
pre .css .pseudo,
pre .html .doctype,
pre .regexp,
pre .ruby .constant,
pre .tag,
pre .variable,
pre .xml .doctype,
pre .xml .pi,
pre .xml .tag .title {
  color: #c82829;
}

pre .built_in,
pre .constant,
pre .literal,
pre .number,
pre .params,
pre .preprocessor {
  color: #f5871f;
}

pre .class,
pre .css .rules .attribute,
pre .header,
pre .inheritance,
pre .ruby .class .title,
pre .ruby .symbol,
pre .string,
pre .value,
pre .xml .cdata {
  color: #718c00;
}

pre .css .hexcolor {
  color: #3e999f;
}

pre .coffeescript .title,
pre .function,
pre .javascript .title,
pre .perl .sub,
pre .python .decorator,
pre .python .title,
pre .ruby .function .title,
pre .ruby .title .keyword {
  color: #4271ae;
}

pre .javascript .function,
pre .keyword {
  color: #8959a8;
}

/* hide mobile nav menu and its checkbox */
/* when it's not mobile */
.mobile-nav,
#mobile-menu-toggle,
.mobile-nav-link {
  display: none;
}

/* align the text (in nav menu) to right */
/* set line-height in /archives page */
.mobile-nav-menu {
  text-align: right;
  line-height: 1.8;
}

/* search bar */
.searchContainer {
  border-radius: 5px;
  width: 10em;
  color:#d8d8d8;
  background-color:#333;
  outline: 0;
  float: right;
  height: 1.8em;
  position: relative;
}

/* don't underline the search icon */
.searchContainer a:hover,
.searchContainer a:visited,
.searchContainer a:link,
.searchContainer a:active {
  border-bottom: none;
}

/* inline-block to position them in same line */
.searchBox,
.searchBtn{
  display:inline-block;
  color: inherit;
  background-color: inherit;
}

/* hide the border and fill the height to parent's */
.searchBox {
  border: 0;
  border-radius: 5px;
  height:100%;
  width: 85%;
  padding-left: 0.2em;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
}

/* highlight the text box when focused */
.searchBox:focus {
  border: 1px solid #1abc9c;
}

/* align the button to center */
.searchBtn {
  width: 10%;
  position: absolute;
  top: 50%;
  transform: translate(30%, -50%);
}

/* fill the svg with parent's font color */
svg {
  fill: currentColor;
}

@media (max-width: 768px) {
  body {
    font-size: 1.2em;
  }

  .archive-container,
  .archive-footer,
  .article,
  .home .content,
  .post-footer {
    width: 80%;
  }

  .article-title {
    font-size: 1.8rem;
  }

  /* hide desktop nav */
  .main-nav {
    display: none;
  }

  /* display mobile nav */
  .mobile-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
  }

  /* display links when menu button is clicked */
  /* use grid to display each link in new line */
  #mobile-menu-toggle:checked + .mobile-nav-link {
    display: grid;
    display: -ms-grid;
    border: 2px solid #999;
    border-radius: 5px;
    margin-left: 5px;
    padding: 10px;
    text-align: left;
  }
}

@media (max-width: 468px) {
  body {
    font-size: 1em;
  }

  .home {
    color: #222;
  }

  .home a {
    color: #111;
  }

  .archive-container .archive-footer,
  .archive-container .post-footer {
    padding: 1em;
  }

  .archive-container .archive-article-header > a,
  .archive-container .archive-article-header > h1 {
    width: 100%;
  }
}
/* ... */

